<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="10dp"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/user"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineMiddle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineMiddle"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name1"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/nameTxt"
           app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/timeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineMiddle"
            app:layout_constraintTop_toTopOf="@id/nameTxt"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time1"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/nameTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/name"/>

        <TextView
            android:id="@+id/depTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dep"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineMiddle"
            app:layout_constraintTop_toTopOf="@id/timeTxt"/>

        <TextView
            android:id="@+id/department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dep1"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/nameTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/time"/>

        <TextView
            android:id="@+id/emailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineMiddle"
            app:layout_constraintTop_toTopOf="@id/depTxt"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email1"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/nameTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/department"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="156dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>