<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to Attachment App"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toTopOf="@+id/guidelineLogoBottom"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineRegisterBottom"/>

    <TextView
        android:id="@+id/registerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account? Login"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toTopOf="@+id/guidelineRegisterBottom"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineForgotPassBottom"/>

    <EditText
        android:id="@+id/firstName"
        android:background="@drawable/white_background"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:hint="@string/fname"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginBottom="25sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guidelineFnBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineForgotPassBottom"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:hint="@string/lname"
        android:textAlignment="center"
        android:background="@drawable/white_background"
        android:inputType="textPersonName"
        android:layout_marginBottom="15sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guidelineSnBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineFnBottom"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/regNo"
        android:background="@drawable/white_background"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:hint="@string/reg"
        android:textAlignment="center"
        android:layout_marginBottom="15sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guidelinePhoneBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineSnBottom"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/emailTxt"
        android:background="@drawable/white_background"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:autofillHints=""
        android:inputType="textEmailAddress"
        android:hint="@string/emailReg"
        android:textAlignment="center"
        android:layout_marginBottom="15sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guidelineEmailBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="@+id/guidelinePhoneBottom"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/passwordTxt"
        android:background="@drawable/white_background"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guidelinePassBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineMrgStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineEmailBottom"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineMrgStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineMrgEnd"
        app:layout_constraintTop_toTopOf="@id/guidelinePassBottom"
        app:layout_constraintBottom_toBottomOf="@id/guidelineMrgBottom"
        tools:ignore="VisualLintButtonSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLogoTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLogoBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRegisterBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForgotPassBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFnBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSnBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePhoneBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEmailBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePassBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMrgBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />
</androidx.constraintlayout.widget.ConstraintLayout>